# llm-fundamentals

./: .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json  devcontainer_setup.sh
exercises/tokenization/: byte-pair encoding tokenization.ipynb
scripts/: generate_exercises.py
solutions/tokenization/: byte-pair encoding tokenization.ipynb
